[tool.poetry]
name = "ATRI"
version = "0.0.1"
description = "仅用于自动格式化代码"
authors = ["Kyomotoi <kyomotoiowo@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/Kyomotoi/ATRI"
repository = "https://github.com/Kyomotoi/ATRI"
documentation = "https://github.com/Kyomotoi/ATRI/wiki"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.4-beta.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
