[tool.poetry]
name = "ATRI"
version = "001.106.01"
description = "A project for ATRI, Usage go-CQHTTP + Nonebot2."
authors = ["Kyomotoi <kyomotoiowo@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://atri.imki.moe/"
repository = "https://github.com/Kyomotoi/ATRI"
documentation = "https://atri.imki.moe/"

[tool.poetry.dependencies]
python = "3.8.5"
aiofiles = "^0.8.0"
APScheduler = "^3.9.1"
Pillow = "^9.1.1"
nonebot2 = "2.0.0-beta.2"
nonebot-adapter-onebot = "2.0.0-beta.1"
nonebot-plugin-gocqhttp = "^0.5.5"
psutil = "^5.9.1"
pytz = "^2022.1"
PyYAML = "^6.0"
scikit-image = "^0.19.2"
tensorflow = "^2.9.1"
jieba = "^0.42.1"
tabulate = "^0.8.9"
wcwidth = "^0.2.5"
tortoise-orm = "^0.19.1"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
black = "^22.3"
nonebug = "^0.2.1"

[tool.pytest.ini_options]
addopts = '-p no:warnings'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
